traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:8: error: not found: value diago
  if(y==0 && diago+1<getMondeLargeur()){setPos(diag+1,0);return diag+1}
             ^TraversalDiagonal:8: warning: enclosing method avance has result type Unit: return value discarded
  if(y==0 && diago+1<getMondeLargeur()){setPos(diag+1,0);return diag+1}
                                                         ^TraversalDiagonal:9: warning: enclosing method avance has result type Unit: return value discarded
  if(diag>=getMondeLargeur() && x+1==getMondeLargeur()){setPos(y,getMondeHauteur());return diag+1}
                                                                                    ^TraversalDiagonal:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return diag}
         ^TraversalDiagonal:11: warning: enclosing method avance has result type Unit: return value discarded
  return diag}
  ^TraversalDiagonal:20: error: type mismatch;
 found   : Unit
 required: Int
     diag=avance(diag)}while(!estPosiFin())
                ^